various updates, seems to run on all 5 test patients successfully now

--- a/workflow/notebooks/label_electrodes_atlas.py.ipynb
+++ b/workflow/notebooks/label_electrodes_atlas.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "tissue_prob_vol = dict()\n",
     "tissue_prob_elec = dict()\n",
     "\n",
-    "for label,nii in zip(snakemake.config['tissue_labels'], snakemake.input.tissue_probsegs):\n",
+    "for label,nii in zip(snakemake.config['tissue_labels'], snakemake.input.tissue_seg):\n",
     "    print(label)\n",
     "    print(nii)\n",
     "    tissue_prob_vol[label] = nib.load(nii).get_fdata()\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    \n",
     "    \n",
     "    if labelnum >0:\n",
-    "        labelnames.append(df_atlas.loc[df_atlas['index']==labelnum,'name'].to_list()[0])\n",
+    "        labelnames.append(df_atlas.loc[df_atlas['label']==labelnum,'name'].to_list()[0])\n",
     "    else:\n",
     "        labelnames.append('None')\n",
     "        \n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
